# BOSS-Textract-NER

./: .gitignore  README.md  base_config.cfg  config.cfg  main.py  pyproject.toml
boss_textract/commands/: predict_command.py  train_command.py
boss_textract/core/: predicter.py  preprocessor.py  trainer.py
boss_textract/utils/: __init__.py  logger.py
docs/: pipeline_train.drawio  pipeline_train_old.drawio
notebook/: app.ipynb
sgs_textract/: __main__.py
sgs_textract/commands/: base_command.py  predict_command.py  train_command.py
sgs_textract/core/: predicter.py  preprocessor.py  trainer.py
sgs_textract/utils/: logger.py
src/: create_train.py  predict.py  prepare_train.py  train.py
src/utils/: logger.py
