[project]
name = "sgs-enterprises-extract"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "pip>=25.0",
    "setuptools>=75.8.0",
    "spacy>=3.8.4",
    "wheel>=0.45.1",
    "scikit-learn>=1.6.1",
    "pandas>=2.2.3",
    "loguru>=0.7.3",
    "spacy-transformers>=1.3.5",
    "cupy-cuda12x>=13.3.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
